@@ -1,2 +1,2 @@
-DOS2UNIX_VERSION = 4.1.1
-DOS2UNIX_DATE = 2010-01-21
+DOS2UNIX_VERSION = 4.1.2-beta1
+DOS2UNIX_DATE = 2010-01-22
